2000-11-29  Jeff Freedman  <jeff@amy.nerble.net>

	* Font-handling move to shapes directory.

2000-11-29  Tristan Tarrant  <nadir@users.sourceforge.net>
	* audio/midi_drivers/Timidity_binary.cc: use %lu in sprintf instead of
	  the meaningless %ul

2000-11-29  Max Horn  <max@quendi.de>
	* lots-o-files: changed #include <something.h> to the C++ version: 
	  include <csomething>
	* exult.cc: removed Mouse *mouse and bool mouse_enabled
	* Mouse.h/cc: added static Mouse *Mouse::mouse and 
          bool Mouse::mouse_enabled
	* various files: adapted to new class members of Mouse

2000-11-29  Max Horn  <max@quendi.de>
	* Makefile.be/win32/cygwin: fixed to properly support new dirs gumps/, 
	  shapes/, usecode/
	* shapes/shapevga.cc: added some using std:: to make it compile on 
	  MacOS

2000-11-29  Tristan Tarrant  <nadir@users.sourceforge.net>
	* audio/midi_drivers/Timidity_binary.*: support repeat of songs

2000-11-29  Max Horn  <max@quendi.de>
	* updated Makefiles/configure.in to include gumps

2000-11-29  Max Horn  <max@quendi.de>
	* gumps/*: split up gumps.cc/h and spells.cc/h into separate files
	* autoarray.h: std:: changes
	* game.h: made sure this file can be included before gamewin.h 
	  (previously, you would get errors)
	* exult.cc: moved some gump-related stuff to gumps/gump_utils.cc/h
	* various: adapted to gumps changes

2000-11-28  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode/*: split up usecode.cc/h into separate files
	* configure.in, Makefile.am: changed to reflect this
	* Makefile.win32, Makefile.Be, Makefile.cygwin: changed too
	* various: changed includes

2000-11-28  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode.h: in usecode macros: '## NAME ## (int...' to 
	  '## NAME (int...'
	* Makefile.be: adapted somewhat because of new imagewin directory

2000-11-27  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in: I mistakenly used target instead of host. fixed.

2000-11-27  Max Horn  <max@quendi.de>